--- a/index.html
+++ b/index.html
@@ -16,5 +16,28 @@
             </div>
         </div>
     </header>
+    <section>
+        <div class="container">
+             <div class="row">
+                 <div class="col"-3>
+                     <div class="row">
+                        <div class="col-4"> 
+                            <li class="list-inline-item"><a href="#">Home</a></li>
+                        </div>    
+                        <div class="col-4"> 
+                              <span>
+                                 ძიება 
+                              </span>
+                         </div>
+                              <div class="col-4"> 
+                                <span>
+                                    იყიდება
+                                </span>  
+                              </div>
+                     </div>                      
+                 </div>
+             </div>
+        </div> 
+    </section>
 </body>
 </html>
